# terminal_mcp_server

./: Makefile  README.md  mcp-config.json  mcp.json  mcp_client_verification_report.txt  pyproject.toml  pytest.ini  requirements.txt  test_mcp_connection.py
config/: config.yaml
src/terminal_mcp_server/: __init__.py  server.py
src/terminal_mcp_server/handlers/: __init__.py  command_handlers.py  environment_handlers.py  process_handlers.py  python_handlers.py
src/terminal_mcp_server/models/: __init__.py  terminal_models.py
src/terminal_mcp_server/utils/: command_executor.py  config.py  output_streamer.py  process_manager.py  venv_manager.py
tasks/: prd-terminal-mcp-server.md  tasks-prd-terminal-mcp-server.md
tests/unit/: test_command_executor.py  test_command_handlers.py  test_directory_structure.py  test_environment_handlers.py  test_module_structure.py  test_output_streamer.py  test_process_handlers.py  test_process_manager.py  test_pyproject_config.py  test_python_handlers.py  test_requirements.py  test_scaffolding_cleanup.py  test_terminal_config.py  test_terminal_models.py  test_venv_manager.py  test_working_directory.py
tools/: debug_tool_registration.py  mcp_client_verification.py  test_mcp_connection.py  test_script.py  test_streaming_registration.py
